# string-protagonist

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
client/: Cargo.toml  package-lock.json  package.json
client/audio/: Cargo.toml
client/audio/src/: lib.rs  music.rs  nn.rs
client/public/: PitchProcessor.js
client/src/: App.js  PitchNode.ts  index.css  setupAudio.ts  state.tsx
client/src/game/: api.js  game-loop.js  song-tabs.js
client/src/helpers/: tunings.js
client/src/views/: End.css  End.jsx  Game.css  Game.jsx  Note.jsx  StartPage.css  StartPage.jsx
data_processor/: Cargo.toml  README.md
data_processor/src/: main.rs
ml/: model.py
ml/py/: evaluation.ipynb  freq_predictor.onnx  model.py
ml/py/data/: log_binning_out.csv
public/: index.html
py/: evaluation.ipynb  freq_predictor.onnx  report_dynamo_export.sarif
server/: api.js  config.js  leaderboards.js  package-lock.json  package.json  server.js
src/: App.js  setupAudio.ts
src/game/: game-loop.js
src/views/: Game.css  Game.jsx  Note.jsx  StartPage.css  StartPage.jsx
wasm-lib/: Cargo.toml
