[package]
name = "data_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.5.1"
rand = "0.8.5"
realfft = "3.3.0"
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.108"
