[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
realfft = "3.3.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'MediaDevices',
  'MediaStream',
  'Worker',
  'Window',
  'MessageEvent',
  'Navigator',
  'MediaStreamConstraints',
  'MediaStreamAudioSourceNode',
  'GpuLoadOp',
  'GpuRenderPassColorAttachment',
  'WorkerNavigator',
  'Navigator',
  'GpuCanvasContext', 
  "Document",
  "Navigator",
  "Node",
  "NodeList",
  "Gpu",
  "GpuAdapter",
  "GpuAddressMode",
  "GpuAutoLayoutMode",
  "GpuBindGroup",
  "GpuBindGroupDescriptor",
  "GpuBindGroupEntry",
  "GpuBindGroupLayout",
  "GpuBindGroupLayoutDescriptor",
  "GpuBindGroupLayoutEntry",
  "GpuBlendComponent",
  "GpuBlendFactor",
  "GpuBlendOperation",
  "GpuBlendState",
  "GpuBuffer",
  "GpuBufferBinding",
  "GpuBufferBindingLayout",
  "GpuBufferBindingType",
  "GpuBufferDescriptor",
  "GpuCanvasAlphaMode",
  "GpuCanvasContext",
  "GpuCanvasConfiguration",
  "GpuColorDict",
  "GpuColorTargetState",
  "GpuCommandBuffer",
  "GpuCommandBufferDescriptor",
  "GpuCommandEncoder",
  "GpuCommandEncoderDescriptor",
  "GpuCompareFunction",
  "GpuCompilationInfo",
  "GpuCompilationMessage",
  "GpuCompilationMessageType",
  "GpuComputePassDescriptor",
  "GpuComputePassEncoder",
  "GpuComputePipeline",
  "GpuComputePipelineDescriptor",
  "GpuCullMode",
  "GpuDepthStencilState",
  "GpuDevice",
  "GpuDeviceDescriptor",
  "GpuDeviceLostInfo",
  "GpuDeviceLostReason",
  "GpuError",
  "GpuErrorFilter",
  "GpuExtent3dDict",
  "GpuFeatureName",
  "GpuFilterMode",
  "GpuFragmentState",
  "GpuFrontFace",
  "GpuImageCopyBuffer",
  "GpuImageCopyExternalImage",
  "GpuImageCopyTexture",
  "GpuImageCopyTextureTagged",
  "GpuImageDataLayout",
  "GpuIndexFormat",
  "GpuLoadOp",
  "gpu_map_mode",
  "GpuMipmapFilterMode",
  "GpuMultisampleState",
  "GpuObjectDescriptorBase",
  "GpuOrigin2dDict",
  "GpuOrigin3dDict",
  "GpuOutOfMemoryError",
  "GpuPipelineDescriptorBase",
  "GpuPipelineLayout",
  "GpuPipelineLayoutDescriptor",
  "GpuPowerPreference",
  "GpuPrimitiveState",
  "GpuPrimitiveTopology",
  "GpuProgrammableStage",
  "GpuQuerySet",
  "GpuQuerySetDescriptor",
  "GpuQueryType",
  "GpuQueue",
  "GpuRenderBundle",
  "GpuRenderBundleDescriptor",
  "GpuRenderBundleEncoder",
  "GpuRenderBundleEncoderDescriptor",
  "GpuRenderPassColorAttachment",
  "GpuRenderPassDepthStencilAttachment",
  "GpuRenderPassDescriptor",
  "GpuRenderPassEncoder",
  "GpuRenderPipeline",
  "GpuRenderPipelineDescriptor",
  "GpuRequestAdapterOptions",
  "GpuSampler",
  "GpuSamplerBindingLayout",
  "GpuSamplerBindingType",
  "GpuSamplerDescriptor",
  "GpuShaderModule",
  "GpuShaderModuleDescriptor",
  "GpuStencilFaceState",
  "GpuStencilOperation",
  "GpuStorageTextureAccess",
  "GpuStorageTextureBindingLayout",
  "GpuStoreOp",
  "GpuSupportedFeatures",
  "GpuSupportedLimits",
  "GpuTexture",
  "GpuTextureAspect",
  "GpuTextureBindingLayout",
  "GpuTextureDescriptor",
  "GpuTextureDimension",
  "GpuTextureFormat",
  "GpuTextureSampleType",
  "GpuTextureView",
  "GpuTextureViewDescriptor",
  "GpuTextureViewDimension",
  "GpuUncapturedErrorEvent",
  "GpuUncapturedErrorEventInit",
  "GpuValidationError",
  "GpuVertexAttribute",
  "GpuVertexBufferLayout",
  "GpuVertexFormat",
  "GpuVertexState",
  "GpuVertexStepMode",
  "HtmlCanvasElement",
  "OffscreenCanvas",
  "ImageBitmap",
  "ImageBitmapRenderingContext",
  "Window",
  "WorkerGlobalScope",
  "WorkerNavigator",
]
